Prefer direct source download to github checkout
- This commit includes a substantial refactor of the existing blueprints to use ERB instead of gsub for their templating.

[#95624116]

--- a/templates/nginx_blueprint.sh.erb
+++ b/templates/nginx_blueprint.sh.erb
@@ -4,10 +4,10 @@ set -e
 INSTALLATION_DIR=$1
 
 function build_nginx() {
-  curl -f -L -O "http://nginx.org/download/nginx-$NGINX_VERSION.tar.gz"
-  tar zxf "nginx-$NGINX_VERSION.tar.gz"
+  curl -f -L -O "http://nginx.org/download/nginx-<%= binary_version %>.tar.gz"
+  tar zxf "nginx-<%= binary_version %>.tar.gz"
 
-  cd "nginx-$NGINX_VERSION"
+  cd "nginx-<%= binary_version %>"
   ./configure \
     --prefix="/" \
     --error-log-path=stderr \
