Revert "Update nginx install location"
This reverts commit 7eb740aca615cfaecd0a613dc5a41cd7d9eba2f0. This build
made the built nginx tarball work with the staticfile-buildpack, but
also rendered it incompatible with the php buildpack.

--- a/templates/nginx_blueprint.sh.erb
+++ b/templates/nginx_blueprint.sh.erb
@@ -23,7 +23,7 @@ function build_nginx() {
     --without-http_scgi_module \
     --with-pcre \
     --with-pcre-jit
-  make -j 5 install DESTDIR=$INSTALLATION_DIR/nginx
+  make -j 5 install DESTDIR=$INSTALLATION_DIR
 }
 
 # build required libs & httpd
@@ -31,6 +31,6 @@ build_nginx
 
 # Remove unnecessary files and config
 cd $INSTALLATION_DIR
-rm -rf nginx/html/ nginx/conf/*
+rm -rf html/ conf/*
 
 echo "Done!"
