--- a/templates/jruby_blueprint.sh.erb
+++ b/templates/jruby_blueprint.sh.erb
@@ -7,7 +7,7 @@ apt-get update
 apt-get -y install maven openjdk-7-jdk
 
 curl https://s3.amazonaws.com/jruby.org/downloads/<%= jruby_version %>/jruby-src-<%= jruby_version %>.tar.gz -s --fail -o - | tar xzf - 2>/dev/null
-cd jruby-src-<%= jruby_version %>
+cd jruby-<%= jruby_version %>
 
 mvn -Djruby.default.ruby.version=<%= ruby_version %>
 
