--- a/templates/httpd_blueprint.sh.erb
+++ b/templates/httpd_blueprint.sh.erb
@@ -4,9 +4,6 @@ set -e
 STAGING_DIR="/tmp/staged/app"
 INSTALLATION_DIR=$1
 
-mkdir -p /app
-ln -sf $INSTALLATION_DIR /app/httpd
-
 function build_apr() {
   curl -f -L -O "http://apache.mirrors.tds.net/apr/apr-<%= BUILD_VERSIONS[:apr_version] %>.tar.gz"
   tar zxf "apr-<%= BUILD_VERSIONS[:apr_version] %>.tar.gz"
@@ -68,7 +65,7 @@ function build_httpd() {
     --disable-dav \
     --disable-dialup
   make -j 3
-  make install
+  make install prefix=$INSTALLATION_DIR/httpd
   popd
 }
 
@@ -78,14 +75,14 @@ build_required_libs
 build_httpd
 
 # Remove unnecessary files and config
-cd "/app/httpd"
+cd $INSTALLATION_DIR/httpd
 rm -rf build/ cgi-bin/ error/ icons/ include/ man/ manual/ htdocs/
 rm -rf conf/extra/* conf/httpd.conf conf/httpd.conf.bak conf/magic conf/original
 
 # Install required libraries
-mkdir "/app/httpd/lib"
-cp "$STAGING_DIR/libapr-<%= BUILD_VERSIONS[:apr_version] %>/lib/libapr-1.so.0" "/app/httpd/lib"
-cp "$STAGING_DIR/libapr-util-<%= BUILD_VERSIONS[:apr_util_version] %>/lib/libaprutil-1.so.0" "/app/httpd/lib"
-cp "$STAGING_DIR/libapr-iconv-<%= BUILD_VERSIONS[:apr_iconv_version] %>/lib/libapriconv-1.so.0" "/app/httpd/lib"
+mkdir $INSTALLATION_DIR/httpd/lib
+cp "$STAGING_DIR/libapr-<%= BUILD_VERSIONS[:apr_version] %>/lib/libapr-1.so.0" $INSTALLATION_DIR/httpd/lib
+cp "$STAGING_DIR/libapr-util-<%= BUILD_VERSIONS[:apr_util_version] %>/lib/libaprutil-1.so.0" $INSTALLATION_DIR/httpd/lib
+cp "$STAGING_DIR/libapr-iconv-<%= BUILD_VERSIONS[:apr_iconv_version] %>/lib/libapriconv-1.so.0" $INSTALLATION_DIR/httpd/lib
 
 echo "Done!"
