Build shared pcntl module

--- a/templates/php_blueprint.sh.erb
+++ b/templates/php_blueprint.sh.erb
@@ -89,7 +89,8 @@ function build_php() {
       --enable-mbregex \
       --enable-exif=shared \
       --with-openssl=shared \
-      --enable-fpm
+      --enable-fpm \
+      --enable-pcntl=shared
   else
     cd "php-$PHP_VERSION"
   fi
