--- a/templates/httpd_blueprint.sh.erb
+++ b/templates/httpd_blueprint.sh.erb
@@ -5,7 +5,7 @@ STAGING_DIR="/tmp/staged/app"
 INSTALLATION_DIR=$1
 
 function build_apr() {
-  curl -f -L -O "http://apache.mirrors.tds.net/apr/apr-<%= BUILD_VERSIONS[:apr_version] %>.tar.gz"
+  curl -f -L -O --retry 3 --connect-timeout 20 --retry-delay 1 "http://apache.mirrors.tds.net/apr/apr-<%= BUILD_VERSIONS[:apr_version] %>.tar.gz"
   tar zxf "apr-<%= BUILD_VERSIONS[:apr_version] %>.tar.gz"
   pushd "apr-<%= BUILD_VERSIONS[:apr_version] %>"
   ./configure --prefix="$STAGING_DIR/libapr-<%= BUILD_VERSIONS[:apr_version] %>"
@@ -15,7 +15,7 @@ function build_apr() {
 }
 
 function build_apr_iconv() {
-  curl -f -L -O "http://apache.mirrors.tds.net/apr/apr-iconv-<%= BUILD_VERSIONS[:apr_iconv_version] %>.tar.gz"
+  curl -f -L -O --retry 3 --connect-timeout 20 --retry-delay 1 "http://apache.mirrors.tds.net/apr/apr-iconv-<%= BUILD_VERSIONS[:apr_iconv_version] %>.tar.gz"
   tar zxf "apr-iconv-<%= BUILD_VERSIONS[:apr_iconv_version] %>.tar.gz"
   pushd "apr-iconv-<%= BUILD_VERSIONS[:apr_iconv_version] %>"
   ./configure \
@@ -27,7 +27,7 @@ function build_apr_iconv() {
 }
 
 function build_apr_util() {
-  curl -f -L -O "http://apache.mirrors.tds.net/apr/apr-util-<%= BUILD_VERSIONS[:apr_util_version] %>.tar.gz"
+  curl -f -L -O --retry 3 --connect-timeout 20 --retry-delay 1 "http://apache.mirrors.tds.net/apr/apr-util-<%= BUILD_VERSIONS[:apr_util_version] %>.tar.gz"
   tar zxf "apr-util-<%= BUILD_VERSIONS[:apr_util_version] %>.tar.gz"
   pushd "apr-util-<%= BUILD_VERSIONS[:apr_util_version] %>"
   ./configure \
@@ -52,7 +52,7 @@ function build_required_libs() {
 }
 
 function build_httpd() {
-  curl -f -L -O "http://ftp.wayne.edu/apache/httpd/httpd-<%= binary_version %>.tar.bz2"
+  curl -vvv -f -L -O --retry 3 --connect-timeout 20 --retry-delay 1 "http://archive.apache.org/dist/httpd//httpd-<%= binary_version %>.tar.bz2"
   tar jxf "httpd-<%= binary_version %>.tar.bz2"
   pushd "httpd-<%= binary_version %>"
   ./configure \
