--- a/templates/php_blueprint.sh.erb
+++ b/templates/php_blueprint.sh.erb
@@ -90,7 +90,8 @@ function build_php() {
       --enable-exif=shared \
       --with-openssl=shared \
       --enable-fpm \
-      --enable-pcntl=shared
+      --enable-pcntl=shared \
+      --with-readline=shared
   else
     cd "php-$PHP_VERSION"
   fi
