Adding MD5 verification for python
Signed-off-by: Anthony Emengo <aemengo@pivotal.io>

--- a/templates/python_blueprint.sh.erb
+++ b/templates/python_blueprint.sh.erb
@@ -1,19 +1,23 @@
-#!/usr/bin/env bash
-set -e
-
 INSTALLATION_DIR=$1
-PREFIX='/app/.heroku/vendor'
+BINARY_VERSION=<%= binary_version %>
+DEST_DIR=`pwd`/python-${BINARY_VERSION}
+FILENAME=Python-${BINARY_VERSION}.tgz
+TAR_URL=https://www.python.org/ftp/python/$BINARY_VERSION/$FILENAME
 
-mkdir -p /app/.heroku
-ln -s $INSTALLATION_DIR $PREFIX
 
-curl https://www.python.org/ftp/python/<%= binary_version %>/Python-<%= binary_version %>.tgz | tar xzf -
-cd Python-<%= binary_version %>
-./configure --prefix=${PREFIX} --enable-shared --with-ensurepip=no
-make -j 3 install
+template_steps() {
+  PREFIX='/app/.heroku/vendor'
+  mkdir -p /app/.heroku
+  ln -s $INSTALLATION_DIR $PREFIX
 
-# For python3 only:
-cd $INSTALLATION_DIR/bin
-if ! [ -f ./python ]; then
-  ln -s ./python3 ./python
-fi
+  ./configure --prefix=${PREFIX} --enable-shared --with-ensurepip=no
+  make -j 3 install
+
+  #for python 3 only
+  cd $INSTALLATION_DIR/bin
+  if ! [ -f ./python ]; then
+    ln -s ./python3 ./python
+  fi
+}
+
+main "$@"
