--- a/templates/node_blueprint.sh.erb
+++ b/templates/node_blueprint.sh.erb
@@ -2,7 +2,7 @@ INSTALLATION_DIR=$1
 BINARY_VERSION=v<%= binary_version %>
 DEST_DIR=`pwd`/node-${BINARY_VERSION}
 FILENAME=node-$BINARY_VERSION.tar.gz
-TAR_URL=http://nodejs.org/dist/${BINARY_VERSION}/$FILENAME
+TAR_URL=https://nodejs.org/dist/${BINARY_VERSION}/$FILENAME
 NODE_DIR=$INSTALLATION_DIR/node-${BINARY_VERSION}-linux-x64
 
 template_steps() {
